<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame_inicio"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ActivityBienvenida">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="148dp"
            android:layout_height="173dp"
            android:src="@drawable/logo_circle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:cardBackgroundColor="#E7F2F8"
        app:cardCornerRadius="30dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/titulo_bienvenida"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="-2dp" />

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_light"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_mensaje"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_log"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/border_radius_gradient"
                android:text="@string/textbutton_log"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button_reg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/border_radius_gradient"
                android:text="@string/textbutton_reg"
                android:textColor="#fff" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>