<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".RegisterActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="bottom"
                android:elevation="5dp"
                android:background="@drawable/background_log_reg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/titulo_reg"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:elevation="3dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="40dp">

                        <EditText
                            android:id="@+id/edittext_name_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/poppins_regular"
                            android:hint="@string/edittext_nombres_reg"
                            android:inputType="text"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">
                        <EditText
                            android:id="@+id/edittext_lastname_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/edittext_apellidos_reg"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="text"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">
                        <EditText
                            android:id="@+id/edittext_email_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/edittext_correo_reg"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textEmailAddress"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp">
                        <EditText
                            android:id="@+id/edittext_number_phone_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/edittext_telefono_reg"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimaryDark">
                        <EditText
                            android:id="@+id/edittext_password_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/edittext_contrasena_reg"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimaryDark">
                        <EditText
                            android:id="@+id/edittext_password_confirm_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/edittext_contrasena_confir_reg"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radiobutton_padre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                       android:textSize="18sp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/radiobutton_padre"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/radiobutton_docente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/radiobutton_docente"/>
                </RadioGroup>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/border_radius_gradient"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/textbutton_entrar"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />


            </LinearLayout>
            </LinearLayout>
        </ScrollView>

</RelativeLayout>